Partial_14Dec2021/force-app/main/default/objects/Tour_Plan__c/Tour_Plan__c.object-meta.xml
<CustomObject>
    <label>Tour Plan(O)</label>
    <nameField>
        <displayFormat>TP-{0}</displayFormat>
        <label>Tour Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tour Plan(O)</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>