Partial_14Dec2021/force-app/main/default/objects/Tour_Plan__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tour Program Approved</label>
    <type>Checkbox</type>
</CustomField>