Partial_14Dec2021/force-app/main/default/objects/Tour_Plan__c/fields/Contacts__c.field-meta.xml
<CustomField>
    <fullName>Contacts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacts</label>
    <referenceTo>Contacts__c</referenceTo>
    <relationshipName>Tour_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>