Partial_14Dec2021/force-app/main/default/objects/Tour_Plan__c/fields/Courier__c.field-meta.xml
<CustomField>
    <fullName>Courier__c</fullName>
    <label>Courier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>