Partial_14Dec2021/force-app/main/default/objects/Tour_Plan__c/fields/District1__c.field-meta.xml
<CustomField>
    <fullName>District1__c</fullName>
    <label>District1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nellore</fullName>
            </value>
            <value>
                <fullName>Cuddapah</fullName>
            </value>
            <value>
                <fullName>Karim Nagar</fullName>
            </value>
            <value>
                <fullName>Kurnool</fullName>
            </value>
            <value>
                <fullName>West Godavari</fullName>
            </value>
            <value>
                <fullName>Srikakulam</fullName>
            </value>
            <value>
                <fullName>Anantpur</fullName>
            </value>
            <value>
                <fullName>Adilabad</fullName>
            </value>
            <value>
                <fullName>Chittor</fullName>
            </value>
            <value>
                <fullName>east Godavari</fullName>
            </value>
            <value>
                <fullName>Guntur</fullName>
            </value>
            <value>
                <fullName>Hyderabad Urban</fullName>
            </value>
            <value>
                <fullName>Khammam</fullName>
            </value>
            <value>
                <fullName>Krishna</fullName>
            </value>
            <value>
                <fullName>Mehboobnagar</fullName>
            </value>
            <value>
                <fullName>Medak</fullName>
            </value>
            <value>
                <fullName>Nalgonda</fullName>
            </value>
            <value>
                <fullName>Nizamabad</fullName>
            </value>
            <value>
                <fullName>Prakasam</fullName>
            </value>
            <value>
                <fullName>Ranga Reddy</fullName>
            </value>
            <value>
                <fullName>Vishakapatnam</fullName>
            </value>
            <value>
                <fullName>Vizianagaram</fullName>
            </value>
            <value>
                <fullName>Warangal</fullName>
            </value>
            <value>
                <fullName>Diban Valley( Anini Valley)</fullName>
            </value>
            <value>
                <fullName>East Kameng Seppa</fullName>
            </value>
            <value>
                <fullName>Itanagar</fullName>
            </value>
            <value>
                <fullName>East Siang(Passighat)</fullName>
            </value>
            <value>
                <fullName>Lohit(Tezu)</fullName>
            </value>
            <value>
                <fullName>Lower Subansiri(Ziro)</fullName>
            </value>
            <value>
                <fullName>Khonsa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>