Partial_14Dec2021/force-app/main/default/objects/Tour_Plan__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <label>District</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adilabad</fullName>
            </value>
            <value>
                <fullName>Agra</fullName>
            </value>
            <value>
                <fullName>Ahmedabad</fullName>
            </value>
            <value>
                <fullName>Ahmednagar</fullName>
            </value>
            <value>
                <fullName>Aizawal</fullName>
            </value>
            <value>
                <fullName>Ajmer</fullName>
            </value>
            <value>
                <fullName>Akola</fullName>
            </value>
            <value>
                <fullName>Alapuzzha</fullName>
            </value>
            <value>
                <fullName>Aligarh</fullName>
            </value>
            <value>
                <fullName>Allahabad</fullName>
            </value>
            <value>
                <fullName>Almora</fullName>
            </value>
            <value>
                <fullName>Alog( West Siang )</fullName>
            </value>
            <value>
                <fullName>Alwar</fullName>
            </value>
            <value>
                <fullName>Ambala</fullName>
            </value>
            <value>
                <fullName>Ambedkarnagar</fullName>
            </value>
            <value>
                <fullName>Amravati</fullName>
            </value>
            <value>
                <fullName>Amrela</fullName>
            </value>
            <value>
                <fullName>Amritsar</fullName>
            </value>
            <value>
                <fullName>Anand</fullName>
            </value>
            <value>
                <fullName>Anantnag</fullName>
            </value>
            <value>
                <fullName>Anantpur</fullName>
            </value>
            <value>
                <fullName>Angul</fullName>
            </value>
            <value>
                <fullName>Anooppur</fullName>
            </value>
            <value>
                <fullName>Araria</fullName>
            </value>
            <value>
                <fullName>Ashoknagar</fullName>
            </value>
            <value>
                <fullName>Aurangabad</fullName>
            </value>
            <value>
                <fullName>Azamgarh</fullName>
            </value>
            <value>
                <fullName>Badgan</fullName>
            </value>
            <value>
                <fullName>Badwani</fullName>
            </value>
            <value>
                <fullName>Bageshwar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>