Partial_14Dec2021/force-app/main/default/objects/Tour_Plan__c/fields/Expenses_Details__c.field-meta.xml
<CustomField>
    <fullName>Expenses_Details__c</fullName>
    <label>Expenses Details</label>
    <type>TextArea</type>
</CustomField>