Partial_14Dec2021/force-app/main/default/objects/Tour_Plan__c/fields/Food__c.field-meta.xml
<CustomField>
    <fullName>Food__c</fullName>
    <label>Food and Boarding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>