Partial_14Dec2021/force-app/main/default/objects/Tour_Plan__c/fields/Local_Conveyance__c.field-meta.xml
<CustomField>
    <fullName>Local_Conveyance__c</fullName>
    <label>Local Conveyance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>