Partial_14Dec2021/force-app/main/default/objects/Tour_Plan__c/fields/Location_1__c.field-meta.xml
<CustomField>
    <fullName>Location_1__c</fullName>
    <label>Location 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>