Partial_14Dec2021/force-app/main/default/objects/Tour_Plan__c/fields/Market_Class__c.field-meta.xml
<CustomField>
    <fullName>Market_Class__c</fullName>
    <inlineHelpText>A/B/C</inlineHelpText>
    <label>Market Class</label>
    <length>80</length>
    <type>Text</type>
</CustomField>