Partial_14Dec2021/force-app/main/default/objects/Tour_Plan__c/fields/Miscellaneous_Details__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_Details__c</fullName>
    <label>Miscellaneous Details</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>