Partial_14Dec2021/force-app/main/default/objects/Tour_Plan__c/fields/No_of_Promotional_Activities__c.field-meta.xml
<CustomField>
    <fullName>No_of_Promotional_Activities__c</fullName>
    <label>No of Promotional Activities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>