Partial_14Dec2021/force-app/main/default/objects/Tour_Plan__c/fields/Other_Contacts_If_Any__c.field-meta.xml
<CustomField>
    <fullName>Other_Contacts_If_Any__c</fullName>
    <label>Other Contacts (If Any)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>