Partial_14Dec2021/force-app/main/default/objects/Tour_Plan__c/fields/Place__c.field-meta.xml
<CustomField>
    <fullName>Place__c</fullName>
    <label>Place</label>
    <length>30</length>
    <type>Text</type>
</CustomField>