Partial_14Dec2021/force-app/main/default/objects/Tour_Plan__c/fields/Place_Auto__c.field-meta.xml
<CustomField>
    <fullName>Place_Auto__c</fullName>
    <formula>IF(ISPICKVAL(Visit_to__c, &apos;Contact&apos;),  Contacts__r.City__c,  Distributor_Dealer__r.City__c)</formula>
    <label>Place Auto</label>
    <type>Text</type>
</CustomField>