Partial_14Dec2021/force-app/main/default/objects/Tour_Plan__c/fields/Remarks_for_Not_meeting_the_Visit_Targ__c.field-meta.xml
<CustomField>
    <fullName>Remarks_for_Not_meeting_the_Visit_Targ__c</fullName>
    <label>Remarks for Not meeting the Visit Targ</label>
    <type>TextArea</type>
</CustomField>