Partial_14Dec2021/force-app/main/default/objects/Tour_Plan__c/fields/Stationery_and_Photocopy__c.field-meta.xml
<CustomField>
    <fullName>Stationery_and_Photocopy__c</fullName>
    <label>Stationery and Photocopy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>