Partial_14Dec2021/force-app/main/default/objects/Tour_Plan__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF( Total_Visits_Target__c &gt; 0 , &apos;Tour Plan Not Completed&apos;,
IF(Total_Visits_Target__c = 0 , &apos;Tour Plan Completed&apos;, &apos;More Visits&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>