Partial_14Dec2021/force-app/main/default/objects/Tour_Plan__c/fields/Telephone_Fax_Internet__c.field-meta.xml
<CustomField>
    <fullName>Telephone_Fax_Internet__c</fullName>
    <label>Telephone, Fax, Internet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>