Partial_14Dec2021/force-app/main/default/objects/Tour_Plan__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <label>To</label>
    <length>80</length>
    <type>Text</type>
</CustomField>