Partial_14Dec2021/force-app/main/default/objects/Tour_Plan__c/fields/Total_Actual_Visits__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Visits__c</fullName>
    <formula>No_of_Dealers__c +  No_of_Distributors__c  +  No_of_Engineers__c +  No_of_Architects__c +  No_of_Consultants__c  +  Other_Contacts_If_Any__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Actual Visits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>