Partial_14Dec2021/force-app/main/default/objects/Tour_Plan__c/fields/Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses__c</fullName>
    <formula>Fare__c + Local_Conveyance__c + Lodge__c +  Food__c  + Telephone_Fax_Internet__c + Courier__c + Stationery_and_Photocopy__c + Miscellaneous__c + Miscellaneous_Details__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>