Partial_14Dec2021/force-app/main/default/objects/Tour_Plan__c/fields/Total_Visits_Target__c.field-meta.xml
<CustomField>
    <fullName>Total_Visits_Target__c</fullName>
    <defaultValue>12</defaultValue>
    <label>Total Visits (Target)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>