Partial_14Dec2021/force-app/main/default/objects/Tour_Plan__c/fields/Visit_to__c.field-meta.xml
<CustomField>
    <fullName>Visit_to__c</fullName>
    <label>Visit to</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Distributor/Dealer</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>