Partial_14Dec2021/force-app/main/default/objects/Tour_Plan__c/fields/WeekDay__c.field-meta.xml
<CustomField>
    <fullName>WeekDay__c</fullName>
    <label>WeekDay</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mon</fullName>
            </value>
            <value>
                <fullName>Tue</fullName>
            </value>
            <value>
                <fullName>Wed</fullName>
            </value>
            <value>
                <fullName>Thu</fullName>
            </value>
            <value>
                <fullName>Fri</fullName>
            </value>
            <value>
                <fullName>Sat</fullName>
            </value>
            <value>
                <fullName>Sun</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>